{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 21,
  "lineage": "7d0a19ab-38bf-de14-c8c9-a8374498bd03",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06cc5ebfb8571a147",
            "arn": "arn:aws:ec2:ap-south-1:338658063633:instance/i-0b409e5c5f6cb6d2f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b409e5c5f6cb6d2f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-app-key-d53473b5",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a8c98e61a9c101ed"
              }
            ],
            "primary_network_interface_id": "eni-0a8c98e61a9c101ed",
            "private_dns": "ip-10-0-1-11.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.11",
            "public_dns": "ec2-43-204-30-167.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.30.167",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-012350f33ad74b8b9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-098f7f6ca838c2d34",
            "tags": {
              "Name": "devops-app-app-server",
              "Project": "devops-app"
            },
            "tags_all": {
              "Name": "devops-app-app-server",
              "Project": "devops-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06917f358cadef600",
              "sg-091054fed01b8fedf",
              "sg-0ed5b7c892c745801"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "338658063633",
            "id": "i-0b409e5c5f6cb6d2f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_key_pair.app_kp",
            "aws_security_group.monitoring_sg",
            "aws_security_group.ssh_sg",
            "aws_security_group.web_app_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "random_id.suffix",
            "tls_private_key.app_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:338658063633:internet-gateway/igw-0a5d6c7408082a199",
            "id": "igw-0a5d6c7408082a199",
            "owner_id": "338658063633",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops-app-igw"
            },
            "tags_all": {
              "Name": "devops-app-igw"
            },
            "vpc_id": "vpc-009b3a1c457dcf13d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:338658063633:route-table/rtb-09c1c5b89b3e926f6",
            "id": "rtb-09c1c5b89b3e926f6",
            "owner_id": "338658063633",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a5d6c7408082a199",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-app-public-rt"
            },
            "tags_all": {
              "Name": "devops-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-009b3a1c457dcf13d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "338658063633",
            "id": "rtb-09c1c5b89b3e926f6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f4c52f490971a6b",
            "region": "ap-south-1",
            "route_table_id": "rtb-09c1c5b89b3e926f6",
            "subnet_id": "subnet-098f7f6ca838c2d34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitoring_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:338658063633:security-group/sg-06917f358cadef600",
            "description": "Allow Prometheus and Grafana access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06917f358cadef600",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              }
            ],
            "name": "devops-app-monitoring-sg",
            "name_prefix": "",
            "owner_id": "338658063633",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-app-monitoring-sg"
            },
            "tags_all": {
              "Name": "devops-app-monitoring-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-009b3a1c457dcf13d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "338658063633",
            "id": "sg-06917f358cadef600",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:338658063633:security-group/sg-0ed5b7c892c745801",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed5b7c892c745801",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devops-app-ssh-sg",
            "name_prefix": "",
            "owner_id": "338658063633",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-app-ssh-sg"
            },
            "tags_all": {
              "Name": "devops-app-ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-009b3a1c457dcf13d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "338658063633",
            "id": "sg-0ed5b7c892c745801",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:338658063633:security-group/sg-091054fed01b8fedf",
            "description": "Allow HTTP inbound traffic to web app (port 5000)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091054fed01b8fedf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "devops-app-web-app-sg",
            "name_prefix": "",
            "owner_id": "338658063633",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-app-web-app-sg"
            },
            "tags_all": {
              "Name": "devops-app-web-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-009b3a1c457dcf13d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "338658063633",
            "id": "sg-091054fed01b8fedf",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:338658063633:subnet/subnet-098f7f6ca838c2d34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098f7f6ca838c2d34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "338658063633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops-app-public-subnet"
            },
            "tags_all": {
              "Name": "devops-app-public-subnet"
            },
            "vpc_id": "vpc-009b3a1c457dcf13d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "338658063633",
            "id": "subnet-098f7f6ca838c2d34",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:338658063633:vpc/vpc-009b3a1c457dcf13d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-073ef78d740f8d01d",
            "default_route_table_id": "rtb-03502a796bb000849",
            "default_security_group_id": "sg-05aec9b324f63c80e",
            "dhcp_options_id": "dopt-0db4125b6095067c8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-009b3a1c457dcf13d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03502a796bb000849",
            "owner_id": "338658063633",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops-app-vpc"
            },
            "tags_all": {
              "Name": "devops-app-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "338658063633",
            "id": "vpc-009b3a1c457dcf13d",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}